--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,86 @@
 @media only screen and (max-width: 768px) {
+  body {
+    color: #F6F6F6;
+    background: #F6F6F6;
+    font-family: "Roboto", sans-serif;
+    color: #000000;
+    margin: 0;
+  }
+  button {
+    font-weight: 500;
+    font-size: 16px;
+    padding: 13px 0;
+    margin: 20px 0;
+    background-color: linear-gradient 193.33deg, #9356DC -11.44%, #FF79DA 123.93%;
+    color: #fff;
+    width: 218px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+    border: 0;
+  }
+  button:hover {
+    background-color: #9356DC;
+  }
+  .header {
+    background: #fff;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  }
+  .header__logo {
+    width: 162px;
+    height: 44px;
+    padding: 14px 0 5px 0;
+  }
+  .header__back {
+    color: #000000;
+    position: absolute;
+    left: 23px;
+  }
+  .place {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 0;
+    gap: 17px;
+    color: #353535;
+    background: #EAEAEA;
+  }
+  .place__city {
+    text-decoration: none;
+    color: #353535;
+    font-weight: 500;
+    font-size: 16px;
+    padding-right: 10px;
+  }
+  .presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 39px 20px 57px 20px;
+  }
+  .presentation__heading {
+    padding: 0 25px;
+    font-weight: 700;
+    font-size: 24px;
+    color: #000000;
+  }
+  .presentation__detail {
+    padding: 10px 0;
+    font-weight: 300;
+    font-size: 18px;
+    color: #353535;
+    margin: 0;
+  }
+  .operation {
+    background: #fff;
+  }
+}
+@media only screen and (max-width: 768px) {
   /**** LOADER ****/
   .loader-space {
     position: fixed;
