--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,114 @@ $colors-bg-new: #99E2D0;
 $colors-font-new: #008766;
 $colors-font-top: #353535;
 $colors-font-primary: #000000;
+$colors-btn: linear-gradient (193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+
+
+@mixin button () {
+    padding: 13px 0;
+    margin: 20px 0;
+    background-color: $colors-btn;
+    color: $colors-bg-operation;
+    width: 218px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+    border: 0;
+    &:hover {
+        background-color: $colors-step-order;
+    }
+
+}
+@media only screen and (max-width: 768px) {
+    
+
+body {
+    color: $colors-bg;
+    background: $colors-bg;
+    font-family: 'Roboto', sans-serif;
+    color: $colors-font-primary;
+    margin: 0;
+}
+
+button {
+    font-weight: 500;
+    font-size: 16px;
+    @include button;
+    }
+
+.header {
+    background: $colors-bg-operation;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+        &__logo {
+            width: 162px;
+            height: 44px;
+            padding: 14px 0 5px 0;
+        }
+
+        &__back {
+            color: $colors-font-primary;
+            position: absolute;
+            left: 23px;
+        }
+}
+
+.place {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 0;
+    gap: 17px;
+    color: $colors-font-top;
+    background: $colors-bg-place;
+    &__city {
+        text-decoration: none;
+        color: $colors-font-top;
+        font-weight: 500;
+        font-size: 16px;
+        padding-right: 10px;
+    }
+}
+
+.presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 39px 20px 57px 20px;
+    &__heading {
+        padding: 0 25px;
+        font-weight: 700;
+        font-size: 24px;
+        color: #000000;
+    }
+
+    &__detail {
+        padding: 10px 0;
+        font-weight: 300;
+        font-size: 18px;
+        color: #353535;
+        margin: 0;
+    }
+}
+
+.operation {
+    background: $colors-bg-operation;
+
+}
+
+
+}$colors-bg: #F6F6F6;
+$colors-bg-place: #EAEAEA;
+$colors-step-order: #9356DC;
+$colors-bg-operation: #fff;
+$colors-bg-new: #99E2D0;
+$colors-font-new: #008766;
+$colors-font-top: #353535;
+$colors-font-primary: #000000;
 $colors-btn: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 $colors-btn: -webkit-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
@@ -440,6 +548,7 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     }
     
     
+
 
 /**** PAGE RESTAURANTS ****/
 
