--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,10 +6,10 @@ $colors-bg-new: #99E2D0;
 $colors-font-new: #008766;
 $colors-font-top: #353535;
 $colors-font-primary: #000000;
-$colors-btn: linear-gradient (193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+$colors-btn: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+$colors-step-order: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%); 
 
-
-@mixin button () {
+@mixin button {
     padding: 13px 0;
     margin: 20px 0;
     background-color: $colors-btn;
@@ -20,8 +20,57 @@ $colors-btn: linear-gradient (193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     border: 0;
     &:hover {
         background-color: $colors-step-order;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
     }
 
+}
+
+.loader {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    & div{
+        position: absolute;
+        border: 4px solid #fff;
+        opacity: 1;
+        border-radius: 50%;
+        animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+        &:nth-child(2){
+            animation-delay: -0.5s;
+        }
+    }
+
+}
+@keyframes loader {
+    0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    }
+    4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    }
+    5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+    }
+    100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+    }
 }
 @media only screen and (max-width: 768px) {
     
