--- a/sass/main.css
+++ b/sass/main.css
@@ -1,73 +1,93 @@
-.loader {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.loader div {
-  position: absolute;
-  border: 4px solid #fff;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-.loader div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-
-@keyframes loader {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  4.9% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  5% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
-}
 @media only screen and (max-width: 768px) {
+  /**** LOADER ****/
+  .loader-space {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: hsla(300, 14%, 95%, 0.83);
+    animation-duration: 0.2s;
+    animation-delay: 3s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-name: infinite;
+  }
+  @keyframes infinite {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+  .loader {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .loader div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .loader div:nth-child(1) {
+    left: 8px;
+    animation: loader1 0.6s infinite;
+  }
+  .loader div:nth-child(2) {
+    left: 8px;
+    animation: loader2 0.6s infinite;
+  }
+  .loader div:nth-child(3) {
+    left: 32px;
+    animation: loader2 0.6s infinite;
+  }
+  .loader div:nth-child(4) {
+    left: 56px;
+    animation: loader3 0.6s infinite;
+  }
+  @keyframes loader1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes loader3 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes loader2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
   body {
     color: #F6F6F6;
     background: #F6F6F6;
     font-family: "Roboto", sans-serif;
     color: #000000;
     margin: 0;
-  }
-  button {
-    font-weight: 500;
-    font-size: 16px;
-    padding: 13px 0;
-    margin: 20px 0;
-    color: #fff;
-    width: 218px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    border: 0;
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-  }
-  button:hover {
-    background-color: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
   }
   .header {
     background: #fff;
@@ -87,34 +107,37 @@
     position: absolute;
     left: 23px;
   }
+  /**** LOCAL ****/
   .place {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 16px 0;
+    padding: 15px 0;
     gap: 17px;
     color: #353535;
+    font-size: 16px;
+    font-weight: 500;
     background: #EAEAEA;
   }
   .place__city {
     text-decoration: none;
     color: #353535;
-    font-weight: 500;
-    font-size: 16px;
     padding-right: 10px;
   }
+  /**** PRESENTATION ****/
   .presentation {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 39px 20px 57px 20px;
+    padding: 39px 20px 30px 20px;
   }
   .presentation__heading {
     padding: 0 25px;
-    font-weight: 700;
+    margin: 0;
     font-size: 24px;
+    font-weight: 700;
     color: #000000;
   }
   .presentation__detail {
@@ -124,12 +147,36 @@
     color: #353535;
     margin: 0;
   }
+  button {
+    padding: 13px 0;
+    margin: 20px 0;
+    color: #fff;
+    width: 218px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+    border: 0;
+    background: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    margin: 0;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 27px 0;
+  }
+  button:hover {
+    background-color: #9356DC;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  }
+  /**** FONCTIONNEMENT ****/
   .operation {
     background: #fff;
     padding: 48px 20px;
     display: flex;
     flex-direction: column;
     gap: 26px;
+  }
+  .operation__title {
+    margin: 0;
+    font-size: 24px;
+    font-weight: 700;
   }
   .step {
     display: flex;
@@ -145,7 +192,7 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
     border-radius: 20px;
     gap: 20px;
-    margin: 0px 0px 0px 10px;
+    margin-left: 10px;
     list-style: none;
     padding: 10px 40px;
     position: relative;
@@ -161,14 +208,19 @@
     color: #fff;
     position: absolute;
   }
+  /**** RESTAURANTS ****/
   .restaurants {
     display: flex;
     flex-direction: column;
     padding: 54px 18px 66px 17px;
-    gap: 20px;
+    gap: 25px;
   }
   .restaurants__title {
     padding-left: 3px;
+    padding-bottom: 3px;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 700;
   }
   .restaurants__card {
     display: flex;
@@ -185,8 +237,12 @@
   }
   .card {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 180px 71px;
+    grid-template-areas: "image-card image-card image-card" "txt-card txt-card like";
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
     height: 251px;
     box-sizing: border-box;
     background: #fff;
@@ -194,10 +250,12 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   }
   .card__image {
-    height: 70%;
+    grid-area: image-card;
+    grid-column-start: 1;
+    grid-column-end: 4;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
-    position: relative;
   }
   .card__image img {
     -o-object-fit: cover;
@@ -215,68 +273,121 @@
     background-color: #99E2D0;
     color: #008766;
     border-radius: 2px;
+    font-size: 14px;
+    font-weight: 500;
   }
   .card__content {
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    grid-area: txt-card;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    height: 71px;
     padding: 16px 25px 12px 13px;
+    box-sizing: border-box;
   }
-  .card__content .card-txt {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  .card__content .card-txt .card-title {
+  .card__content h3 {
     margin: 0;
+    font-size: 18px;
+    font-weight: 700;
   }
-  .card__content .card-txt .card-place {
+  .card__content p {
     margin: 0;
     font-size: 17px;
     font-weight: 300;
   }
-  /**like**/
-  #like-fav {
-    position: absolute;
-    left: 270px;
-    top: 350px;
-    width: 20px;
-    height: 20px;
+  .card__like {
+    grid-area: like;
+    box-sizing: border-box;
+    padding: 25px;
   }
-  input {
+  /**FAVORI**/
+  label {
+    cursor: pointer;
+  }
+  .like-checked1, .like-checked2, .like-checked3, .like-checked4 {
+    font-size: 22px;
+  }
+  .like-unchecked1, .like-unchecked2, .like-unchecked3, .like-unchecked4 {
+    font-size: 23px;
+    color: blueviolet;
+  }
+  /**like1**/
+  input[type=checkbox]#like1, .like-unchecked1 {
     display: none;
   }
-  label {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    cursor: pointer;
-    display: block;
+  input[type=checkbox]#like1:checked ~ .like-unchecked1 {
+    display: inline-block;
   }
-  label:active {
-    font-weight: 900;
-    background-color: #9356DC;
-    color: #9356DC;
+  input[type=checkbox]#like1:checked ~ .like-checked1 {
+    display: none;
   }
-  .like-icon::before {
-    content: "\f004";
+  /**like2**/
+  input[type=checkbox]#like2, .like-unchecked2 {
+    display: none;
+  }
+  input[type=checkbox]#like2:checked ~ .like-unchecked2 {
+    display: inline-block;
+  }
+  input[type=checkbox]#like2:checked ~ .like-checked2 {
+    display: none;
+  }
+  /**like3**/
+  input[type=checkbox]#like3, .like-unchecked3 {
+    display: none;
+  }
+  input[type=checkbox]#like3:checked ~ .like-unchecked3 {
+    display: inline-block;
+  }
+  input[type=checkbox]#like3:checked ~ .like-checked3 {
+    display: none;
+  }
+  /**like4**/
+  input[type=checkbox]#like4, .like-unchecked4 {
+    display: none;
+  }
+  input[type=checkbox]#like4:checked ~ .like-unchecked4 {
+    display: inline-block;
+  }
+  input[type=checkbox]#like4:checked ~ .like-checked4 {
+    display: none;
+  }
+  /**** FOOTER ****/
+  .footer {
+    background-color: #353535;
+    padding: 22px 25px;
+    font-size: 16px;
     font-weight: 400;
-    font-size: x-large;
+    color: #fff;
   }
-  .like-icon:active:before {
-    content: "\f004";
-    font-weight: 900;
-    background: -webkit-gradient linear, left top, left bottom, from(#FF79DA), to(#9356DC);
-    animation: like 0.5 ease-in both;
+  .footer__title {
+    font-family: Shrikhand, "sans-serif";
+    margin: 0;
+    font-size: 18px;
   }
-  @keyframes like {
-    0% {
-      opacity: 0.3;
-    }
-    100% {
-      opacity: 1;
-    }
+  .footer__content {
+    margin: 16px 0;
+    list-style: none;
+    padding: 0;
   }
+  .footer__content a {
+    text-decoration: none;
+    color: #fff;
+  }
+  .footer__content li {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    gap: 7px;
+    align-items: center;
+    justify-items: start;
+    justify-content: start;
+    padding-top: 7px;
+  }
+  .footer__content li .fa-utensils {
+    padding-right: 6px;
+    font-size: 14px;
+  }
+  .footer__content li .fa-handshake-angle {
+    font-size: 14px;
+  }
+  /**** PAGE RESTAURANTS ****/
 }/*# sourceMappingURL=main.css.map */
