--- a/sass/main.css
+++ b/sass/main.css
@@ -6,7 +6,7 @@
     width: 100%;
     left: 0;
     top: 0;
-    z-index: 1000;
+    z-index: 5000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,10 +68,10 @@
   }
   @keyframes loader3 {
     0% {
-      transform: scale(0);
+      transform: scale(1);
     }
     100% {
-      transform: scale(1);
+      transform: scale(0);
     }
   }
   @keyframes loader2 {
@@ -390,4 +390,16 @@
     font-size: 14px;
   }
   /**** PAGE RESTAURANTS ****/
+  .image-hero {
+    width: 100%;
+    height: 275px;
+    position: relative;
+  }
+  .image-hero img {
+    height: 275px;
+    width: 100%;
+    box-sizing: border-box;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }/*# sourceMappingURL=main.css.map */
