--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,7 +56,7 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
         width: 100%;
         left: 0;
         top: 0;
-        z-index: 1000;
+        z-index: 5000;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -121,10 +121,10 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     }
     @keyframes loader3 {
         0% {
-            transform: scale(0);
+            transform: scale(1);
         }
         100% {
-            transform: scale(1);
+            transform: scale(0);
         }
     }
     @keyframes loader2 {
@@ -443,7 +443,18 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 
 /**** PAGE RESTAURANTS ****/
 
-
+    .image-hero {
+        width: 100%;
+        height: 275px;
+        position: relative;
+    }
+    .image-hero img {
+        height: 275px;
+        width: 100%;
+        box-sizing: border-box;
+        object-fit: cover;
+        
+    }
 
 
 
