page note-enchantee.html

--- a/sass/main.css
+++ b/sass/main.css
@@ -493,7 +493,7 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 .menu-section__card {
   height: 69px;
   display: grid;
-  grid-template-columns: auto 65px 59px;
+  grid-template-columns: auto 65px;
   justify-items: start;
   gap: 10px;
   position: relative;
@@ -509,8 +509,7 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   padding: 10px 15px 0;
   align-items: flex-start;
   box-sizing: border-box;
-  overflow-x: hidden;
-  box-sizing: border-box;
+  width: 100%;
 }
 .choice__title {
   margin: 0;
@@ -854,7 +853,7 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   }
   .section__card input[type=menu1]:checked + .confirm i {
     display: inline-block;
-    transform: rotate(-45 deg);
+    transform: rotate(-45deg);
     visibility: visible;
   }
   .card1 {
