--- a/sass/main.css
+++ b/sass/main.css
@@ -116,6 +116,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 .header__logo {
@@ -124,6 +125,7 @@ body {
 .header__back {
   color: #000000;
   position: absolute;
+  font-size: 20px;
   left: 23px;
 }
 
@@ -502,7 +504,6 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   display: flex;
   flex-direction: row;
   align-items: inherit;
-  justify-content: space-between;
 }
 .menu-section__card .choice {
   display: flex;
@@ -530,7 +531,7 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   font-size: 15px;
   font-weight: 700;
   align-self: flex-end;
-  padding: 0px 30px;
+  padding: 0px 26px;
 }
 .menu-section__card .price p {
   margin: 0;
@@ -546,18 +547,18 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   align-items: center;
   justify-content: center;
   margin: -20px -71px -20px -16px;
-  transition: margin-right 500ms ease;
+  transition: margin-right 300ms linear;
 }
 .menu-section__card .check i {
   font-size: 20px;
   transform: rotate(0);
-  transition: transform 500ms ease;
+  transition: transform 300ms linear;
 }
 .menu-section__card:hover > .check {
   margin-right: -15px;
 }
 .menu-section__card:hover > .check > i {
-  transform: rotate(-360deg);
+  transform: rotate(-1800deg);
 }
 
 @keyframes show {
