--- a/sass/main.scss
+++ b/sass/main.scss
@@ -171,13 +171,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     &__logo {
         padding: 14px 0 5px 0;
+
     }
     &__back {
         color: $colors-font-primary;
         position: absolute;
+        font-size: 20px;
         left: 23px;
     }
 }
@@ -232,23 +235,23 @@ button {
 
 /********* CONTENU INDEX ********/
 /**** LOCAL ****/
-    .place {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 15px 0;
-        gap: 17px;
+.place {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 0;
+    gap: 17px;
+    color: $colors-font-top;
+    font-size: 16px;
+    font-weight: 500;
+    background: $colors-bg-place;
+    &__city {
+        text-decoration: none;
         color: $colors-font-top;
-        font-size: 16px;
-        font-weight: 500;
-        background: $colors-bg-place;
-        &__city {
-            text-decoration: none;
-            color: $colors-font-top;
-            padding-right: 10px;
-        }
+        padding-right: 10px;
     }
+}
 /*** PRESENTATION ***/
 
 .presentation {
@@ -527,7 +530,6 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
         display: flex;
         flex-direction: row;
         align-items: inherit;
-        justify-content: space-between;
         & .choice {
             display: flex;
             flex-direction: column;
@@ -556,7 +558,7 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
             font-size: 15px;
             font-weight: 700;
             align-self: flex-end;
-            padding: 0px 30px;
+            padding: 0px 26px;
             & p{
                 margin: 0;
             }
@@ -572,17 +574,17 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
             align-items: center;
             justify-content: center;
             margin: -20px -71px -20px -16px;
-            transition: margin-right 500ms ease;
+            transition: margin-right 300ms linear;
             & i{
                 font-size: 20px;
                 transform: rotate(0);
-                transition: transform 500ms ease;
+                transition: transform 300ms linear;
             }
         }
         &:hover > .check {
             margin-right: -15px;
             & > i{
-                transform: rotate(-360deg);
+                transform: rotate(-1800deg);
             }
         }
     }
